--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,3 +1,39 @@
-<footer class="uoc-footer">
-    &copy; Universitat Oberta de Catalunya
+<footer class="bg-black">
+  <div class="w-4/5 m-auto">
+    <div class="text-white text-center py-12 leading-4">
+      <p class="mb-4">Mish Rock Band</p>
+      <p class="mb-4">info@mishrockband.com</p>
+      <p class="mb-4">123 456 789</p>
+    </div>
+    <hr class="opacity-25 text-white m-0">
+    <nav class="mt-6 md:mt-0">
+      <div class="flex flex-wrap justify-between items-center flex-col md:flex-row">
+        <div>
+          <a class="m-0" href="index.html">
+            <img src="./assets/images/Logo-grupo-blanco.webp" alt="Logotipo de la web que dirige a la página principal" width="50" height="50" class="inline-block text-center"> 
+          </a>
+          <a class="font-alte text-white text-xl m-0" href="index.html">MISH</a>
+        </div>  
+        <div class="justify-center my-4">
+          <div class="flex flex-col md:flex-row font-alte text-white">
+            <a class="nav-enlace py-2" aria-current="page" href="index.html">Inicio</a>
+            <a class="nav-enlace py-2" href="componentes.html">Componentes</a>
+            <a class="nav-enlace py-2" href="">Biografía</a>
+            <a class="nav-enlace py-2" href="">Galería</a>
+          </div>
+        </div>
+        <ul class="flex items-center my-6 text-white">
+          <li class="mx-2">
+            <a href=""><i class="fa-brands fa-facebook-f"></i></i></a>
+          </li>
+          <li class="mx-2">
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li class="mx-2">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+          </li>
+        </ul>
+      </div>
+    </nav>   
+  </div>
 </footer>
