--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,12 +1,14 @@
-@use "sass:color";
+/* Fuentes */
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-  "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-  "Segoe UI Symbol";
-$font-family-serif: "Georgia", "Times New Roman", serif;
-
-$uoc-corporate: #000078;
-$uoc-masterbrand: #73edff;
-$uoc-bg: color.scale($uoc-masterbrand, $lightness: 70%);
-
-$mqMinWidth: 420px;
+@font-face {
+  font-family: "Alte-Haas-Grotesk-Bold";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/Alte-Haas-Grotesk-Bold.ttf.woff") format("woff"),
+    url("../fonts/Alte-Haas-Grotesk-Bold.ttf.svg#Alte-Haas-Grotesk-Bold")
+      format("svg"),
+    url("../fonts/Alte-Haas-Grotesk-Bold.ttf.eot"),
+    url("../fonts/Alte-Haas-Grotesk-Bold.ttf.eot?#iefix")
+      format("embedded-opentype");
+  font-display: swap;
+}
